[package]
name = "sub_crawler"
version = "1.0.1"
edition = "2021"
authors = ["Sylar"]
description = "A fast, flexible subdomain enumeration tool"
readme = "README.md"
license = "MIT"
repository = "https://github.com/sylar-my/sub_crawler/"
keywords = ["subdomain", "recon", "network", "scanner"]

[dependencies]

clap = { version = "4.x", features = ["derive", "env"] }
colored = "2.1.0"
indicatif = "0.17.9"

